Adding front end page for register
